--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Liste des sessions{% endblock %}
 {% block nav %}
     {{parent()}}
-    <a  class="rounded p-3 mb-2 bg-light text-dark" href="{{path('createSession')}}">Créer une session</a>
+    <a  class="rounded p-1 mb-2 bg-light text-dark" href="{{path('createSession')}}">Créer une session</a>
 {% endblock %}
 {% block body %}
 <!-- <table class="table">
@@ -24,9 +24,10 @@
     <div class="flex mt-4">
     {% for session in sessions %}
         <div class="alert alert-dark">
-            <p><a class="alert-link" href="{{path('programme',{id:session.id})}}"><i class="fas fa-clipboard"></i></a> 
-                - <a class="alert-link" href="{{path('ModifSession',{id:session.id})}}"><i class="far fa-edit"></i></a> 
-                - <a class="alert-link" href="{{path('session_delete',{id:session.id})}}"><i class="far fa-trash-alt"></i></a></p>
+            <p class="d-flex p-2 justify-content-between">
+                <a class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('programme',{id:session.id})}}"><i class="fas fa-clipboard"></i></a> 
+                <a class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('ModifSession',{id:session.id})}}"><i class="far fa-edit"></i></a> 
+                <a class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('session_delete',{id:session.id})}}"><i class="far fa-trash-alt"></i></a></p>
             <p><h4>{{session.nom}}</h4> du {{session.dateDebut | date("d/m/Y")}} au {{session.dateFin | date("d/m/Y")}}</p>
             <p>Places disponibles : {{session.nbPlaces}}</p>
             <p>Place réservées : {{session.stagiaires | length}}</p>
