--- a/templates/stagiaire/index.html.twig
+++ b/templates/stagiaire/index.html.twig
@@ -72,8 +72,8 @@
                     <td class="align-middle">{{stagiaire.nom|capitalize}}</td>
                     <td class="align-middle">{{stagiaire.prenom|capitalize}}</td>
                     <td class="align-middle" width="15%">
-                        <a class="rounded d-inline-block p-3 mt-1 mb-2 bg-light text-dark" href="{{path('/stagiaire/detailStagiaire',{id:stagiaire.id})}}"><i class="fas fa-user"></i></a>
-                        <a class="rounded d-inline-block p-3 mt-1 mb-2 bg-light text-dark" href="{{path('stagiaire_delete',{id:stagiaire.id})}}"><i class="far fa-trash-alt"></i></a>
+                        <a class="border rounded d-inline-block p-3 mt-1 mb-2 bg-light text-dark" href="{{path('/stagiaire/detailStagiaire',{id:stagiaire.id})}}"><i class="fas fa-user"></i></a>
+                        <a class="border rounded d-inline-block p-3 mt-1 mb-2 bg-light text-dark" href="{{path('stagiaire_delete',{id:stagiaire.id})}}"><i class="far fa-trash-alt"></i></a>
                     </td>
                 </tr>
                 
