--- a/templates/stagiaire/trombi.html.twig
+++ b/templates/stagiaire/trombi.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Liste des stagiaires{% endblock %}
 {% block nav %}
 {{parent()}}
-<a href="{{path('addStagiaire')}}">Ajouter un stagiaire</a>
+<a class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('addStagiaire')}}">Ajouter un stagiaire</a>
 {% endblock %}
 {% block body %}
 
