--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Liste des sessions{% endblock %}
 {% block nav %}
     {{parent()}}
-    <a  class="rounded p-1 mb-2 bg-light text-dark" href="{{path('createSession')}}">Créer une session</a>
+    <a  class="rounded p-1 bg-light text-dark" href="{{path('createSession')}}">Créer une session</a>
 {% endblock %}
 {% block body %}
 <!-- <table class="table">
