--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }.flex{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 img{
     max-width: 100%;
@@ -14,7 +14,7 @@ img{
 .table{
     /* max-width: 75%; */
     margin: auto;
-    margin-top: 3em;
+    margin-top: 1em;
 }
 .stagiaire{
     background: blue;
@@ -37,6 +37,9 @@ img{
 .avatar{
     display: inline-block;
     width: 100px;
+}
+.prog{
+    justify-content: space-around;
 }
 .prog div:first-child{
     flex:1;
@@ -62,7 +65,7 @@ img{
     margin: auto;
 }
 .mg_tab{
-    margin-top: 4.25em;
+    /* margin-top: 6.7em; */
     margin-left: 1em;
 }
 .liststag{
@@ -71,4 +74,24 @@ img{
 .list_stag{
     justify-content: space-between;
     flex-wrap: wrap;
+}
+.mod_list{
+    flex-wrap: wrap;
+    flex: 0;
+    justify-content: space-between;
+}
+.crea_prog{
+    width: 50%;
+    /* margin: auto; */
+}
+#programme_module,#module_categorie{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.form-check{
+    margin-right: 1em;
+}
+.between{
+    justify-content: space-between;
 }
