--- a/templates/session/CreaProgramme.html.twig
+++ b/templates/session/CreaProgramme.html.twig
@@ -1,9 +1,26 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<h4>crea Categorie</h4>
-{{form(formCategorie)}}
-<h4>crea module</h4>
-{{form(formModule)}}
-<h4>crea programme</h4>
-{{form(formProgramme)}}
+<div class="flex between">
+    <div>
+        <h4>crea Categorie</h4>
+        {{ form_start(formCategorie) }}
+        {{form_widget(formCategorie)}}
+        <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit">
+        {{ form_end(formCategorie) }}
+    </div>
+    <div>
+        <h4>crea module</h4>
+        {{ form_start(formModule) }}
+        {{form_widget(formModule)}}
+        <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit">
+        {{ form_end(formModule) }}
+    </div>
+</div>
+<div class="crea_prog">
+    {{ form_start(formModule) }}
+    <h4>crea programme</h4>
+    {{form_widget(formProgramme)}}
+    <input class="border border-dark rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" type="submit">
+    {{ form_end(formModule) }}
+</div>
 {% endblock %}
