--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -49,7 +49,7 @@
     <div>
         {% if session.stagiaires|length != 0 %}
             <div colspan="2">
-                <h2>Stagiaires participants </h2><span>
+                <h2>Stagiaires</h2><span>
                 {# {% if session.nbPlaces - session.stagiaires | length > 0 %}
                 <a href="{{path('addStagiaireSess',{id:session.id})}}">Ajouter/supprimer un stagiaire</a></span> 
                 {% else %}
