--- a/templates/stagiaire/index.html.twig
+++ b/templates/stagiaire/index.html.twig
@@ -37,8 +37,8 @@
                               </div>
                               <div class="modal-body">
                                 {% set difference = date("now").diff(date(stagiaire.birth)) %}
-                                <div class="stagiaire">
-                                    <a class="rounded d-inline-block p-3 mt-1 mb-2 bg-light text-dark" href="{{path('updateStagiaire',{id:stagiaire.id})}}">Modifier</a>
+                                <div class="rounded p-1 bg-light text-dark stagiaire">
+                                    <a class="rounded d-inline-block p-1 mt-1 mb-2 bg-dark text-white" href="{{path('updateStagiaire',{id:stagiaire.id})}}">Modifier</a>
                                     <h1><span class="avatar mr-5">
                                         <img src="{{asset('img/'~stagiaire.photo)}}" alt="">
                                     </span><span>Fiche stagiaire</span></h1>
@@ -59,7 +59,7 @@
                                     <h2>Sessions prévues</h2>
                                     <p>
                                         {% for session in stagiaire.sessions %}
-                                            <span><a href="{{path('programme',{id:session.id})}}">{{session.nom}}</i></a></span>
+                                            <p><a class="text-dark" href="{{path('programme',{id:session.id})}}">{{session.nom}}</i></a></p>
                                         {% endfor %}
                                     </p>
                                 </div>
@@ -71,8 +71,8 @@
                     <td class="align-middle">{{stagiaire.nom|capitalize}}</td>
                     <td class="align-middle">{{stagiaire.prenom|capitalize}}</td>
                     <td class="align-middle" width="15%">
-                        <a class="border rounded d-inline-block p-3 mt-1 mb-2 bg-light text-dark" href="{{path('/stagiaire/detailStagiaire',{id:stagiaire.id})}}"><i class="fas fa-user"></i></a>
-                        <a class="border rounded d-inline-block p-3 mt-1 mb-2 bg-light text-dark" href="{{path('stagiaire_delete',{id:stagiaire.id})}}"><i class="far fa-trash-alt"></i></a>
+                        <a class="border rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('/stagiaire/detailStagiaire',{id:stagiaire.id})}}"><i class="fas fa-user"></i></a>
+                        <a class="border rounded d-inline-block p-1 mt-1 mb-2 bg-light text-dark" href="{{path('stagiaire_delete',{id:stagiaire.id})}}"><i class="far fa-trash-alt"></i></a>
                     </td>
                 </tr>
                 
