--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,7 +21,7 @@
         <th scope="col"></th>
         <th></th>
     </thead> -->
-    <div class="flex mt-4">
+    <div class="flex home mt-1">
     {% for session in sessions %}
     {% set difference = session.dateDebut.diff(session.dateFin) %}
         <div class="alert alert-dark">
