--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Liste des sessions{% endblock %}
 {% block nav %}
-    <a  class="rounded p-1 bg-light text-dark" href="{{path('createSession')}}">Créer une session</a>
+    <a  class="rounded p-1 mb-4 bg-light text-dark" href="{{path('createSession')}}">Créer une session</a>
     {{parent()}}
 {% endblock %}
 {% block body %}
