--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -8,7 +8,7 @@
 {% block body %}
 <div class="flex prog">
     <div>
-        <div colspan="2">
+        <div>
             <h1>{{session.nom}}</h1>
             {% set difference = session.dateDebut.diff(session.dateFin) %}
             <div class="mt-4">
