--- a/templates/stagiaire/addStagiaire.html.twig
+++ b/templates/stagiaire/addStagiaire.html.twig
@@ -16,7 +16,7 @@
     </div>
 </div>
     <div class="prev">
-        <img id="blah" src="" alt="">
+        <img id="blah" src="{{asset('img/avatar.jpg')}}" alt="">
     </div>
     {{ form_row(form.photo,{ 'attr': {'onchange': 'readURL(this);'} }) }} 
     {{ form_row(form.submit) }}
