--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,16 @@
             </nav>
         </div>                    
         <div class="wrapper">
+            <div id="errors">
+                {% for message in app.flashes('error') %}
+                    <p class="errors">{{ message }}</p>
+                {% endfor %}
+            </div>
+            <div id="success">
+                {% for message in app.flashes('success') %}
+                    <p class="success">{{ message }}</p>
+                {% endfor %}
+            </div>
             <header>
                 <i class="modileMenu fas fa-bars"></i>
             </header>
